# Kitsu

./: AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_QUICK_REFERENCE.md  AUDIT_REPORT.md  CROSS_AUDIT.md  MODEL_SCHEMA_AUDIT_REPORT.md  PHASE_10_FULL_SYSTEM_AUDIT.md  PRODUCTION_AUDIT_REPORT.md  README.md  STABILIZATION_SUMMARY.md  STAGE_6_DATA_STATE_AUDIT_REPORT.md  TASK_11_ASYNCIO_CREATE_TASK_AUDIT.md
backend/: .env.example  AUDIT_REPORT.md  SECURITY_SUMMARY.md  pyproject.toml
backend/alembic/versions/: 0013_add_admin_core_tables_and_extend_anime_episode.py  0014_add_audit_logs_actor_type_constraint.py  0015_add_unique_constraints_to_rbac_tables.py
backend/app/: config.py  database.py  dependencies.py  errors.py  main.py
backend/app/admin/: __init__.py  (+4 more)
backend/docs/: DOMAIN_INVARIANTS.md  IDEMPOTENCY.md  parser_worker.md
backend/scripts/: seed_admin_core.py
backend/tests/: conftest.py  parser_helpers.py  test_admin_core.py  test_admin_permission_denial_audit.py  test_anime_management.py  test_audit_service_security.py  test_audit_transaction_isolation.py  test_auth_adapters.py  test_auth_rate_limit.py  test_auth_use_cases.py  test_background_jobs.py  test_config_parsing.py  test_cors_and_config.py  test_db_constraints.py  test_parser_admin.py  test_parser_autoupdate.py  test_parser_compliance.py  test_parser_control.py  test_parser_scheduler.py  test_parser_settings.py  test_parser_worker.py  test_permission_service_security.py  test_proxy_errors.py  test_rbac_contract.py  test_rbac_enforcement.py  test_redis_lifecycle.py  test_watch_adapters.py  test_watch_use_cases.py
(+130 files in other folders)
